[add] add tests. Now configuration of the match works properly